# elephant

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  log.txt  logo.txt
doc/: v0.6.md  (+3 more)
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  sourcelist.cmake
src/cli/inc/: elephant_cli.h  elephant_cli.hpp  elephant_cli_config.h.in
src/cli/inc/commands/: bench_command.hpp  command_api.hpp  commands.hpp  divide_command.hpp  fen_command.hpp  help_command.hpp  move.md  move_command.hpp  new_game_command.hpp  print_command.hpp  simple_commands.hpp  uci_commands.hpp
src/cli/inc/printer/: printer.hpp
src/cli/src/: commands.cpp  commands.h  commands_print.cpp  commands_print.h  commands_uci.cpp  commands_uci.h  commands_utils.h  elephant_cli.cpp  openbench.cpp  static_initializer.cpp  static_initializer.hpp
src/cli/src/command_logic/: command_processor.cpp  command_processor.hpp
src/cli/src/command_registry/: command_registry.hpp
src/cli/src/commands/: command_api.hpp  command_processor.cpp  commands.hpp  fen_command.hpp  help_command.hpp  new_game_command.hpp  simple_commands.hpp  uci_commands.cpp
src/cli/src/inc/: elephant_cli.h
src/engine/: CMakeLists.txt  sourcelist.cmake
src/engine/inc/: bitboard.h  bitboard.hpp  bitboard_constants.h  bitboard_constants.hpp  chess_piece.h  chess_piece_defines.hpp  chessboard.h  clock.hpp  defines.h  defines.hpp  elephant_gambit.hpp  elephant_gambit_config.h.in  evaluate_backend.h  evaluation_table.hpp  evaluator.h  fen_parser.h  game_context.h  hash_zorbist.h  intrinsics.hpp  king_pin_threats.hpp  libpopcnt.h  log.h  material.h  material_mask.hpp  move.h  move_generator.h  move_generator.hpp  notation.h  position.hpp  search.h  search.hpp  search_constants.hpp  static_initializer.hpp  transposition_table.hpp  uci.h  uci.hpp
src/engine/inc/attacks/: attacks.cpp  attacks.hpp  magic_constants.hpp
src/engine/inc/bitboard/: bitboard.hpp  bitboard_constants.hpp  intrinsics.hpp
src/engine/inc/core/: chessboard.hpp  game_context.hpp  notation.hpp  square.hpp  square_notation.hpp  uci.hpp
src/engine/inc/debug/: elephant_exceptions.hpp  log.hpp  perft_search.hpp
src/engine/inc/diagnostics/: assert.hpp  logger.hpp
src/engine/inc/eval/: evaluation_table.hpp  evaluator.hpp  evaluator_data.hpp
src/engine/inc/io/: fen_parser.hpp  pgn_parser.hpp  printer.hpp  san_parser.hpp  weight_store.hpp  weights.hpp
src/engine/inc/material/: chess_piece.hpp  chess_piece_defines.hpp  material_mask.hpp  material_topology.hpp
src/engine/inc/math/: bench_positions.hpp  cast.hpp  math.hpp
src/engine/inc/move/: move.hpp  move_executor.hpp
src/engine/inc/move_generation/: bulk_move_generator.hpp  king_pin_threats.hpp  move_bulk_generator.hpp  move_gen_isolation.hpp  move_generator.hpp
src/engine/inc/position/: castling_state_info.hpp  en_passant_state_info.hpp  hash_zobrist.hpp  hash_zorbist.hpp  material_mask.hpp  position.hpp  position_access_policies.hpp  position_accessors.hpp  position_editor.hpp  position_proxy.hpp
src/engine/inc/rays/: rays.cpp  rays.hpp
src/engine/inc/search/: perft_search.hpp  search.hpp  search_constants.hpp  search_heuristic_structures.hpp  search_policies.hpp  search_results.hpp  search_threadcontext.hpp  transposition_table.hpp  transposition_table_fwd.hpp
src/engine/inc/serializing/: fen_parser.hpp  pgn_parser.hpp  san_parser.hpp
src/engine/inc/system/: clock.hpp  platform.hpp  static_initializer.hpp  time_manager.hpp
src/engine/inc/util/: bench_positions.hpp  clock.hpp  static_initializer.hpp  time_manager.hpp
src/engine/inc/utils/: printer.hpp  weight_store.hpp
src/engine/src/: bitboard.cpp  chess_board.cpp  chess_piece.cpp  chessboard.cpp  clock.cpp  elephant_gambit.cpp  evaluator.cpp  evaluator_data.h  fen_parser.cpp  game_context.cpp  hash_zorbist.cpp  internal_defines.h  intrinsics.cpp  king_pin_threats.cpp  log.cpp  material.cpp  material_mask.cpp  move.cpp  move_generator.cpp  notation.cpp  position.cpp  search.cpp  transposition_table.cpp  uci.cpp
src/engine/src/bitboard/: attacks.cpp  rays.cpp
src/engine/src/core/: chessboard.cpp  game_context.cpp  notation.cpp  uci.cpp
src/engine/src/debug/: log.cpp
src/engine/src/diagnostics/: logger.cpp
src/engine/src/eval/: evaluator.cpp
src/engine/src/inc/: chess_board.h  chess_piece.h  chessboard.h  elephant_gambit.h
src/engine/src/io/: fen_parser.cpp  pgn_parser.cpp  printer.cpp  san_parser.cpp  weight_store.cpp
src/engine/src/material/: chess_piece.cpp  material_mask.cpp  (+1 more)
test/: CMakeLists.txt  sourcelist.cmake
test/inc/: bitboard_test_helpers.hpp  chess_positions.hpp  elephant_test_logger.hpp  elephant_test_utils.h  search_cases.hpp
test/src/: bitboard_test.cpp  bitboard_test_helpers.hpp  bulk_move_generator_test.cpp  castling_enpassant_test.cpp  checkmate_test.cpp  chess_positions.hpp  chessboard_test.cpp  elephant_test.cpp  elephant_test_util_funcs.cpp  elephant_test_utils.h  fen_parser_test.cpp  game_context_test.cpp  material_topology_test.cpp  move_bulk_generator_test.cpp  move_executor_test.cpp  move_gen_isolation_test.cpp  move_generator_test.cpp  move_test.cpp  notation_test.cpp  perft_test.cpp  piece_test.cpp  position_proxy_test.cpp  position_test.cpp  rays_test.cpp  san_parser_test.cpp  search_cases.hpp  search_test.cpp  transposition_test.cpp  uci_test.cpp  unmake_test.cpp  weight_store_test.cpp
test/src/bitboard/: bitboard_test.cpp  rays_test.cpp
test/src/io/: fen_parser_test.cpp  san_parser_test.cpp  uci_test.cpp  weight_store_test.cpp  zorbist_hashing_test.cpp
test/src/move/: checkmate_test.cpp  move_bulk_generator_test.cpp  move_executor_test.cpp  move_gen_isolation_test.cpp  move_generator_test.cpp  packed_move_test.cpp  unmake_test.cpp
test/src/position/: castling_enpassant_test.cpp  chess_positions.cpp  evaluation_test.cpp  material_topology_test.cpp  notation_test.cpp  piece_test.cpp  position_proxy_test.cpp  position_test.cpp
test/src/search/: arasan_test.cpp  epd_correctness_test.cpp  perft_test.cpp  search_test.cpp  transposition_test.cpp
(+64 files in other folders)
